--- a/package.json
+++ b/package.json
@@ -2,13 +2,17 @@
   "name": "sunwin-autotoken",
   "version": "1.0.0",
   "main": "sunwin_autotokenv2.js",
+  "type": "commonjs",
   "scripts": {
     "start": "node sunwin_autotokenv2.js"
   },
   "dependencies": {
-    "fastify": "^4.0.0",
-    "@fastify/cors": "^8.0.0",
-    "ws": "^8.0.0",
+    "fastify": "^4.27.0",
+    "@fastify/cors": "^8.5.0",
+    "ws": "^8.17.0",
     "node-fetch": "^2.6.7"
+  },
+  "engines": {
+    "node": "18.x"
   }
 }
